Optimize autoload prefix in composer.json

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
       "src/Cubex/Foundation/Generics/_Helper.php"
     ],
     "psr-0": {
-      "Cubex": "src/"
+      "Cubex\\": "src/"
     }
   }
 
