--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
     "php":     ">=5.4.0",
     "psr/log": "1.0.0"
   },
+  "suggest":           {
+    "mobiledetect/mobiledetectlib": "Supported platform detection library"
+  },
   "autoload":          {
     "files": [
       "src/Cubex/Foundation/Generics/_Helper.php"
