Basic encryption wrapper and interface
Summary: This adds the basics needed to expand with new encryption libraries.

Test Plan: Write some unit tests, and actual tests with the suggested library/package.

Reviewers: brooke

Reviewed By: brooke

Maniphest Tasks: T22

Differential Revision: http://phabricator.cubex.io/D3

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "psr/log": "1.0.0"
   },
   "suggest":           {
-    "mobiledetect/mobiledetectlib": "Supported platform detection library"
+    "mobiledetect/mobiledetectlib": "Supported platform detection library",
+    "onigoetz/phpseclib": "PHP Secure Communications Library - Pure-PHP implementations of RSA, AES, SSH2, SFTP, X.509 etc."
   },
   "autoload":          {
     "files": [
