--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,7 +1,11 @@
-<phpunit bootstrap="phpunit.autoload.php.dist">
+<phpunit bootstrap="phpunit.autoload.php.dist"
+         backupGlobals="false"
+         backupStaticAttributes="false"
+         strict="true"
+         verbose="true">
   <php>
-    <env name="CUBEX_ENV" value="development" />
-    <env name="CUBEX_UNITTEST" value="true" />
+    <env name="CUBEX_ENV" value="development"/>
+    <env name="CUBEX_UNITTEST" value="true"/>
     <ini name="display_errors" value="-1"/>
   </php>
 
@@ -11,5 +15,15 @@
       <directory>./src/Cubex/*/Tests</directory>
     </testsuite>
   </testsuites>
+
+  <logging>
+    <log type="coverage-html" target="build/coverage" title="BankAccount"
+         charset="UTF-8" yui="true" highlight="true"
+         lowUpperBound="35" highLowerBound="70"/>
+    <log type="coverage-clover" target="build/logs/clover.xml"/>
+    <log type="junit" target="build/logs/junit.xml"
+         logIncompleteSkipped="false"/>
+  </logging>
+
 </phpunit>
 
