--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
 <project name="cubex" default="build">
   <target name="build"
-          depends="prepare,lint,phploc,pdepend,phpmd-ci,phpcs-ci,phpcpd,phpdox,phpunit,phpcb"/>
+          depends="prepare,lint,phploc,pdepend,phpmd-ci,phpcs-ci,phpcpd,phpunit,phpcb"/>
 
   <target name="build-parallel"
           depends="prepare,lint,tools-parallel,phpunit,phpcb"/>
