Updates phpunit config to exclude test directories from code coverage

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,5 +25,14 @@
          logIncompleteSkipped="false"/>
   </logging>
 
+  <filter>
+    <whitelist>
+      <directory suffix=".php">./src/Cubex/</directory>
+      <exclude>
+        <directory suffix=".php">./src/Cubex/Tests</directory>
+        <directory suffix=".php">./src/Cubex/*/Tests</directory>
+      </exclude>
+    </whitelist>
+  </filter>
 </phpunit>
 
