--- a/build.xml
+++ b/build.xml
@@ -125,7 +125,10 @@
   </target>
 
   <target name="phpunit" description="Run unit tests with PHPUnit">
-    <exec executable="phpunit" failonerror="true"/>
+    <exec executable="phpunit" failonerror="true">
+      <arg value="--coverage-html build/coverage"/>
+      <arg value="--coverage-clover build/logs/clover.sml"/>
+    </exec>
   </target>
 
   <target name="phpcb" description="Aggregate tool output with PHP_CodeBrowser">
