--- a/build.xml
+++ b/build.xml
@@ -128,6 +128,7 @@
     <exec executable="phpunit" failonerror="true">
       <arg value="--coverage-html build/coverage"/>
       <arg value="--coverage-clover build/logs/clover.sml"/>
+      <arg value="--log-junit build/logs/junit.xml"/>
     </exec>
   </target>
 
