--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,5 +16,15 @@
     </testsuite>
   </testsuites>
 
+  <filter>
+    <whitelist>
+      <directory suffix=".php">./src/Cubex/</directory>
+      <exclude>
+        <directory suffix=".php">./src/Cubex/Tests</directory>
+        <directory suffix=".php">./src/Cubex/*/Tests</directory>
+      </exclude>
+    </whitelist>
+  </filter>
+
 </phpunit>
 
