Removed Transport object and added a call to init() - The transport object was an early implementation of what Cubex now has   as Container, so we just use that. - Added init() to the autoloader for tests so that the ServiceManager is   available

--- a/phpunit.autoload.php.dist
+++ b/phpunit.autoload.php.dist
@@ -21,14 +21,4 @@ $configArray = \Cubex\Foundation\Config\ConfigGroup::fromArray(
 );
 
 $cubex->configure($configArray);
-
-class Transport
-{
-  const CUBEX = "cubex";
-  const CONFIG_GROUP = "config.group";
-
-  public static $data;
-}
-
-Transport::$data[Transport::CUBEX] = $cubex;
-Transport::$data[Transport::CONFIG_GROUP] = $cubex->getConfig();
+$cubex->init();
