Updates to tests to use an extended service mangaer for testing purposes

--- a/phpunit.autoload.php.dist
+++ b/phpunit.autoload.php.dist
@@ -21,4 +21,5 @@ $configArray = \Cubex\Foundation\Config\ConfigGroup::fromArray(
 );
 
 $cubex->configure($configArray);
+$cubex->setServiceManagerClass("\\Cubex\\Tests\\ServiceManager");
 $cubex->init();
