--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   },
   "suggest":           {
     "mobiledetect/mobiledetectlib": "Supported platform detection library",
-    "onigoetz/phpseclib": "PHP Secure Communications Library - Pure-PHP implementations of RSA, AES, SSH2, SFTP, X.509 etc."
+    "phpseclib/phpseclib": "PHP Secure Communications Library - Pure-PHP implementations of RSA, AES, SSH2, SFTP, X.509 etc."
   },
   "autoload":          {
     "files": [
