Allow some regex to be stripped when returning route pattern
Summary: On our first level routing we sometimes want to strip catch-all regex data from the end. This will allow for the next level of routing to run with a realistic baseuri

Test Plan: Run some routes

Reviewers: brooke

Reviewed By: brooke

Differential Revision: http://phabricator.cubex.io/D10

--- a/.arcconfig
+++ b/.arcconfig
@@ -7,5 +7,5 @@
 
     "lint.engine" : "ArcanistSingleLintEngine",
     "lint.engine.single.linter" : "ArcanistPhpcsLinter",
-    "lint.phpcs.standard" : "cubex_code_standards"
+    "lint.phpcs.standard" : "CubexCodeStandards"
 }
