--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
     }
   ],
   "require":           {
-    "php":     ">=5.4.0",
-    "psr/log": "1.0.0"
+    "php":          ">=5.4.0",
+    "cubex/figlet": "*",
+    "psr/log":      "1.0.0"
   },
   "suggest":           {
     "cubex/cassandra":              "Cassandra Connections",
