suggest request library

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
   },
   "suggest":           {
     "cubex/cassandra":              "Cassandra Connections",
+    "rmccue/requests":              "HTTP Request Helper",
     "mobiledetect/mobiledetectlib": "Supported platform detection library",
     "phpseclib/phpseclib":          "PHP Secure Communications Library - Pure-PHP implementations of RSA, AES, SSH2, SFTP, X.509 etc."
   },
