--- a/phpunit.autoload.php.dist
+++ b/phpunit.autoload.php.dist
@@ -21,5 +21,5 @@ $configArray = \Cubex\Foundation\Config\ConfigGroup::fromArray(
 );
 
 $cubex->configure($configArray);
-$cubex->setServiceManagerClass("\\Cubex\\Tests\\ServiceManager");
+$cubex->setServiceManagerClass("\\Cubex\\ServiceManager\\TestServiceManager");
 $cubex->init();
