--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
   "require":           {
     "php":          ">=5.4.0",
     "cubex/figlet": "*",
+    "filp/whoops":  "1.*",
     "psr/log":      "1.0.0"
   },
   "replace":           {
