Added new Browser and Platform detestion services
Support added for browscap/browscap-php

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "mobiledetect/mobiledetectlib": "Supported platform detection library",
     "phpseclib/phpseclib":          "PHP Secure Communications Library - Pure-PHP implementations of RSA, AES, SSH2, SFTP, X.509 etc.",
     "pda/pheanstalk":               "Required if you wish to use Beanstalkd Queue Provider",
-    "videlalvaro/php-amqplib":      "Required if you wish to use AMQP Queue Provider"
+    "videlalvaro/php-amqplib":      "Required if you wish to use AMQP Queue Provider",
+    "browscap/browscap-php":        "Requried for use with one of our Browser and Platform services"
   },
   "bin":               ["bin/kill-cubex-script.sh"],
   "autoload":          {
