--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   ],
   "require":           {
     "php":          ">=5.4.0",
-    "packaged/figlet": "0.l",
+    "cubex/figlet": "*",
     "filp/whoops":  "1.*",
     "psr/log":      "1.0.0"
   },
