updated composer requirment

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "php":          ">=5.4.0",
     "cubex/figlet": "*",
     "filp/whoops":  "1.*",
-    "psr/log":      "1.0.0"
+    "psr/log":      "dev-master"
   },
   "replace":           {
     "cubex/type": "self.version",
